[gd_scene load_steps=22 format=3 uid="uid://bb1au4kirrl0m"]

[ext_resource type="Script" path="res://Tutorials/tutorial_page_4.gd" id="1_vmlcf"]
[ext_resource type="Texture2D" uid="uid://0j0gd37gfemk" path="res://Tutorials/frame_0_delay-0.09s.png" id="2_p536r"]
[ext_resource type="Texture2D" uid="uid://dqlitp6l4d2sa" path="res://Tutorials/frame_1_delay-0.09s.png" id="3_7abme"]
[ext_resource type="Texture2D" uid="uid://dkapowncp0h8k" path="res://Tutorials/frame_2_delay-0.09s.png" id="4_oj5gs"]
[ext_resource type="Texture2D" uid="uid://b5wv5gbc5sxes" path="res://Tutorials/frame_3_delay-0.09s.png" id="5_ueygo"]
[ext_resource type="Texture2D" uid="uid://d0mkafj86t2ml" path="res://Tutorials/frame_4_delay-0.09s.png" id="6_1ettg"]
[ext_resource type="Texture2D" uid="uid://dtbir7oguac84" path="res://Tutorials/frame_5_delay-0.09s.png" id="7_hbcbn"]
[ext_resource type="Texture2D" uid="uid://bn6r0ur0lqcvb" path="res://Art and textures/dialogue_boxes.png" id="8_je1ch"]
[ext_resource type="Texture2D" uid="uid://l2ed7rsic4o8" path="res://MicroGames/MicroGameImages/watering-can.png" id="9_kb3pp"]
[ext_resource type="Texture2D" uid="uid://caq1mruwgyx8y" path="res://MicroGames/MicroGameImages/chemical-drop.png" id="10_k3prs"]
[ext_resource type="Texture2D" uid="uid://p4wv5hiti5g1" path="res://MicroGames/MicroGameImages/scissors.png" id="11_hkfbq"]
[ext_resource type="Texture2D" uid="uid://djpdygihxb3nt" path="res://Art and textures/b_right_arrow.png" id="12_pfhde"]
[ext_resource type="Texture2D" uid="uid://j5dq27taffpv" path="res://Art and textures/spaceman exclamation/Spaceman_exclamation_hand_F1.png" id="13_1wjdu"]
[ext_resource type="Texture2D" uid="uid://cxeegeqhyc3k4" path="res://Art and textures/spaceman exclamation/Spaceman_exclamation_hand_F2.png" id="14_8pfd6"]
[ext_resource type="Texture2D" uid="uid://371k5pccmtoc" path="res://Art and textures/spaceman exclamation/Spaceman_exclamation_hand_F3.png" id="15_enrnd"]
[ext_resource type="Texture2D" uid="uid://ck1r346252v5s" path="res://Art and textures/spaceman exclamation/Spaceman_exclamation_hand_F4.png" id="16_fwec5"]
[ext_resource type="Texture2D" uid="uid://cjiat8w5pk3w3" path="res://Art and textures/spaceman exclamation/Spaceman_exclamation_hand_F5.png" id="17_taoaq"]
[ext_resource type="Texture2D" uid="uid://cwk1xsx0b2gjx" path="res://Art and textures/spaceman exclamation/Spaceman_exclamation_hand_F6.png" id="18_1gop4"]
[ext_resource type="FontFile" uid="uid://bax17lxjdupj4" path="res://Godot-Fontpack/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" id="19_1ybw5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5nsyu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p536r")
}, {
"duration": 1.0,
"texture": ExtResource("3_7abme")
}, {
"duration": 1.0,
"texture": ExtResource("4_oj5gs")
}, {
"duration": 1.0,
"texture": ExtResource("5_ueygo")
}, {
"duration": 1.0,
"texture": ExtResource("6_1ettg")
}, {
"duration": 1.0,
"texture": ExtResource("7_hbcbn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_kicpr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_1wjdu")
}, {
"duration": 1.0,
"texture": ExtResource("14_8pfd6")
}, {
"duration": 1.0,
"texture": ExtResource("15_enrnd")
}, {
"duration": 1.0,
"texture": ExtResource("16_fwec5")
}, {
"duration": 1.0,
"texture": ExtResource("17_taoaq")
}, {
"duration": 1.0,
"texture": ExtResource("18_1gop4")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="tutorial_page1" type="Node2D"]
script = ExtResource("1_vmlcf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(572, 324.5)
scale = Vector2(3.80263, 2.79915)
sprite_frames = SubResource("SpriteFrames_5nsyu")
autoplay = "default"
frame_progress = 0.592108

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(569.5, 554)
scale = Vector2(1.8898, 0.757813)
texture = ExtResource("8_je1ch")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(67, 507)
scale = Vector2(0.107422, 0.118042)
texture = ExtResource("9_kb3pp")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(62, 559)
scale = Vector2(0.10498, 0.115448)
texture = ExtResource("10_k3prs")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(62, 608)
scale = Vector2(0.112793, 0.101776)
texture = ExtResource("11_hkfbq")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 942.0
offset_top = 493.0
offset_right = 1134.0
offset_bottom = 685.0
texture_normal = ExtResource("12_pfhde")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 796.0
offset_top = 493.0
offset_right = 988.0
offset_bottom = 685.0
texture_normal = ExtResource("12_pfhde")
flip_h = true

[node name="Button2" type="Button" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 62.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "X"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(146, 369)
scale = Vector2(0.48, 0.466)
sprite_frames = SubResource("SpriteFrames_kicpr")
autoplay = "default"
frame_progress = 0.501311

[node name="Label" type="Label" parent="."]
offset_left = 117.0
offset_top = 475.0
offset_right = 1141.0
offset_bottom = 524.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_1ybw5")
text = "To water the plants, click on the watering can. To get a high score, you must
collect the water droplets using the ARROW keys to control the can."

[node name="Label2" type="Label" parent="."]
offset_left = 1.0
offset_top = -1.0
offset_right = 1151.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("19_1ybw5")
theme_override_font_sizes/font_size = 28
text = "Minigames"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 111.0
offset_top = 529.0
offset_right = 1135.0
offset_bottom = 578.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_1ybw5")
text = "To control the PH level, click on the test tube. To get a high score, you must click
on the plants that are changing."

[node name="Label4" type="Label" parent="."]
offset_left = 110.0
offset_top = 583.0
offset_right = 1134.0
offset_bottom = 632.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_1ybw5")
text = "To trim the plant, click on the scissors. To get a high score, you must click
on the plant really fast."

[node name="Button" type="Button" parent="."]
offset_left = 1028.0
offset_top = 2.0
offset_right = 1148.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_1ybw5")
text = "Skip Tutorial"

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button" to="." method="Skip"]
